compute.tf
resource "azurerm_linux_virtual_machine" "main" {
  name                = "az104-linux-vm"
  resource_group_name = azurerm_resource_group.main.name
  location            = azurerm_resource_group.main.location
  size                = var.vm_size
  admin_username      = var.admin_username
  admin_password      = var.admin_password
  network_interface_ids         = [azurerm_network_interface.main.id]
  disable_password_authentication = false
  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }
  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-focal"
    sku       = "20_04-lts"
    version   = "latest"
  } 
  tags = {
    environment = "learning"
    project     = "az104-terraform"
    owner       = "MK"
    shell       = "powershell"
  }
}
